# NexTrade-MultiAgent-Assistant

./: .dockerignore  .env.example  .env.sample  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  PRODUCTION_IMPROVEMENTS.md  PRODUCTION_READY_SUMMARY.md  QUICK_REFERENCE.md  README.md  check_setup.py  deploy.sh  docker-compose.yml  kubernetes.yaml  nginx.conf  pyproject.toml  pytest.ini  streamlit_app.py
Documentation/: API_DOCUMENTATION.md  LICENSING_AND_DEPLOYMENT.md  MONITORING.md  PRODUCTION_READY.md  QUICK_START.md  README.md  SAFETY_SECURITY_VERIFICATION.md  SETUP.md  TROUBLESHOOTING.md
data/: trading_orders.db
demos/: README.md  demo_agents.py  demo_database_agent.py  demo_hitl_complete.py  demo_place_order_hitl.py
src/: api.py
src/agent/: __init__.py  context.py  database_tools.py  exceptions.py  graph.py  guardrails_integration.py  logging_config.py  loop_detection.py  prompts.py  resilience.py  state.py  tools.py  utils.py
tests/: conftest.py
tests/integration_tests/: test_api.py  test_multi_agent_system.py
tests/unit_tests/: test_context.py  test_database_tools_comprehensive.py  test_graph_comprehensive.py  test_guardrails.py  test_prompts.py  test_resilience.py  test_state.py  test_tools.py  test_utils.py  test_utils_additional.py
